--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==6.2
 Flask==0.10.1
 flask-appconfig==0.11.1
 Flask-Cache==0.13.1
+Flask-HTTPAuth==2.7.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
