--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,17 @@ Flask==0.10.1
 flask-appconfig==0.11.1
 Flask-Cache==0.13.1
 Flask-HTTPAuth==3.1.0
+-e git+https://github.com/myles/flask-piwikapi.git#egg=flask_piwikapi
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 oauthlib==1.0.3
+piwik==0.5.1
+piwikapi==0.3
 pytz==2016.2
 requests==2.9.1
 requests-oauthlib==0.6.1
+simplejson==3.8.2
 six==1.10.0
 tweepy==3.5.0
 Werkzeug==0.11.4
